[gd_scene load_steps=6 format=3 uid="uid://cuycoalmdivpd"]

[ext_resource type="Script" uid="uid://by05ycqgenspy" path="res://market_screen.gd" id="1_yt0j7"]
[ext_resource type="PackedScene" uid="uid://c0c5uueyrmmcq" path="res://scenes/ui/close_button.tscn" id="2_7fa8d"]
[ext_resource type="StyleBox" uid="uid://e0qv2iqvjwn" path="res://scenes/ui/button_color_normal.tres" id="3_4idej"]
[ext_resource type="ButtonGroup" uid="uid://dlyf4rrsi7gse" path="res://scenes/ui/market-sell-button-group.tres" id="3_7fa8d"]
[ext_resource type="StyleBox" uid="uid://dr88dhdndumkx" path="res://scenes/ui/button_color_pressed.tres" id="4_s7xmv"]

[node name="MarketScreen" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yt0j7")
red_style = ExtResource("3_4idej")
green_style = ExtResource("4_s7xmv")

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="CloseButton" parent="Control" instance=ExtResource("2_7fa8d")]
layout_mode = 1
offset_left = -40.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 40.0

[node name="SellFishButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 191.0
offset_top = 218.0
offset_right = 348.0
offset_bottom = 300.0
toggle_mode = true
button_pressed = true
button_group = ExtResource("3_7fa8d")
text = "Sell Fish"

[node name="SellTinsButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 464.0
offset_top = 222.0
offset_right = 614.0
offset_bottom = 296.0
toggle_mode = true
button_group = ExtResource("3_7fa8d")
text = "Sell Tins"

[connection signal="pressed" from="Control/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Control/SellFishButton" to="." method="_on_sell_fish_button_pressed"]
[connection signal="pressed" from="Control/SellTinsButton" to="." method="_on_sell_tins_button_pressed"]
